# WAFMANCER

./: README.md  config.yaml  pyproject.toml  requirements.txt  wafmancer.py
modules/: __init__.py  fuzzer.py
wafmancer/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_config.py
wafmancer/core/: __init__.py  bounty_mode.py  diff_engine.py  fingerprinter.py  http_client.py  mutation_engine.py  neural_exploit.py  neuro_camouflage.py  oracle.py  research_store.py  trust_corruptor.py
wafmancer/plugins/: __init__.py  base.py  fuzzer.py
wafmancer/utils/: helpers.py
